--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
     border-radius: 10px;
     border: 1px solid gray;
     margin-top: 50px;
-    background-color: rgb(247, 242, 242);
+    background-color: white;
     box-shadow: 0 2px 4px 0 black;
 }
 .Youtube-form .form:hover{
@@ -12,7 +12,7 @@
 .Youtube-form .form input, .Youtube-form .form textarea{
     border: none;
     border-bottom: 1px solid gray;
-    background-color: rgb(247, 242, 242);     
+    background-color: white;     
     outline: none;
     margin-bottom: 10px;
     width: 100%;
@@ -23,11 +23,13 @@
     padding: 10px 20px;
     border-radius: 10px;
     outline: none;
-    background-color: white;
+    background-color: teal;
     border: none;
+    color: white;
     box-shadow: 0 4px 6px 0 black;
     font-size: 18px;
-    margin: 10px
+    margin: 10px;
+    width: 100%
 }
 .Youtube-form .form button:hover{
     box-shadow: 0 2px 4px 0 black;
