Registartion form created

--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,10 @@
 .Youtube-form .form:hover{
     box-shadow: 0 4px 6px 0 black;
 }
-.Youtube-form .form input[type=text],.Youtube-form .form input[type=email], .Youtube-form .form textarea{
+.Youtube-form .form input[type=text],
+.Youtube-form .form input[type=email],
+.Youtube-form .form input[type=password],
+.Youtube-form .form textarea{
     border: none;
     border-bottom: 1px solid gray;
     background-color: white;     
